Resolve IJMP-672 "Feature/"